Update style for font-family.

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd {
     background: #f58b8b;
-    font-family: 'Verdana', 'DejaVu Sans', sans-serif;
+    font-family: Verdana, DejaVu Sans, sans-serif;
 }
 
 #two {
